--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@
     padding: 4px;
   }
   
-  
+  input:focus,
+textarea:focus {
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+}
+
   
   
   input[type=text] {
