--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@
     padding: 0;
     text-align: center;
   }
+
+.container {
+    width: 100%;
+    margin: 3.125rem auto 0 auto;
+}
+
+
+  form {
+    display: block;
+    
+  }
   
   input {
     margin: 3px;
