--- a/style.css
+++ b/style.css
@@ -14,11 +14,19 @@
     margin: 3.125rem auto 0 auto;
     background-color: bisque;
 }
+.header {
+  background-color: rgba(210, 162, 30, 0.735);
+  padding-bottom: 30px;
+}
 #title {
   padding: 30px 0 0 30px;
   margin-bottom: 50px;
   
   font-size: 4rem;
+}
+#description {
+  font-size: 1.2rem;
+  margin: 0 90px 0 90px;
 }
 
 
