--- a/style.css
+++ b/style.css
@@ -22,12 +22,16 @@
 #title {
   padding: 30px 0 0 30px;
   margin-bottom: 50px;
-  
+  font-weight: 900;
   font-size: 4rem;
+  text-decoration: underline;
+  text-underline-offset: 15px;
+  
 }
 #description {
   font-size: 1.2rem;
   margin: 0 90px 0 90px;
+  font-weight: 600;
 }
 
 
